Fixed up some cmake lists

--- a/gLog/CMakeLists.txt
+++ b/gLog/CMakeLists.txt
@@ -3,7 +3,10 @@ project(gLog)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(inc)
+set(G_LOG_INCLUDE_DIR
+        ${CMAKE_CURRENT_LIST_DIR}/Inc)
+
+include_directories(${G_LOG_INCLUDE_DIR})
 
 # check if there are actually any srcs set
 IF( "${GLOG_SRC}" STREQUAL "" )
@@ -11,3 +14,5 @@ IF( "${GLOG_SRC}" STREQUAL "" )
 ELSE()
     add_library(gLog-static STATIC ${GLOG_SRC})
 ENDIF()
+
+set(G_LOG_INCLUDE_DIR ${G_LOG_INCLUDE_DIR} PARENT_SCOPE)
