--- a/gStr/CMakeLists.txt
+++ b/gStr/CMakeLists.txt
@@ -5,13 +5,15 @@ set(GSTR_INCLUDE_DIR
         )
 
 set(GSTR_SRC
-        Src/GString.c
+        ${GSTR_ROOT}/Src/GString.c
+        ${GSTR_ROOT}/Src/GString.h
+        ${GSTR_ROOT}/Inc/gStr.h
         )
 
 add_library(GSTR STATIC)
 
 target_sources(GSTR
-        PRIVATE
+        PUBLIC
         ${GSTR_SRC}
         )
 
